--- a/index.html
+++ b/index.html
@@ -1,249 +1,13 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="utf-8" />
-<meta name="viewport" content="width=device-width,initial-scale=1" />
-<title>Neon Portfolio — Pardha Saradhi Chandana</title>
-<link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Pardha Portfolio</title>
+  <link rel="stylesheet" href="style.css"/>
 </head>
 <body>
-<nav class="nav">
-  <div class="brand" id="brand"></div>
-  <ul class="nav-links">
-    <li><a href="#about">About</a></li>
-    <li><a href="#facts">Facts</a></li>
-    <li><a href="#skills">Skills</a></li>
-    <li><a href="#exp">Experience</a></li>
-    <li><a href="#projects">Projects</a></li>
-    <li><a href="#certs">Certifications</a></li>
-    <li><a href="#contact">Contact</a></li>
-  </ul>
-</nav>
-
-<header class="hero" id="home">
-  <canvas id="particles"></canvas>
-  <div class="hero-inner">
-    <div class="photo-wrap">
-      <img src="assets/photo.jpg" alt="Pardha Saradhi Chandana" class="photo">
-    </div>
-    <h1 id="name"></h1>
-    <p id="title"></p>
-    <div class="ctas">
-      <a id="link-linkedin" class="btn" target="_blank">LinkedIn</a>
-      <a id="link-email" class="btn">Contact</a>
-      <a id="link-resume" class="btn" target="_blank">Resume</a>
-    </div>
-  </div>
-</header>
-
-<main class="content">
-  <section id="about" class="section">
-    <div class="container">
-      <h2>About</h2>
-      <p id="about-intro"></p>
-      <p id="about-summary"></p>
-    </div>
-  </section>
-
-  <section id="facts" class="section facts">
-    <div class="container">
-      <h2>Facts</h2>
-      <div class="facts-grid" id="facts-grid"></div>
-    </div>
-  </section>
-
-  <section id="skills" class="section">
-    <div class="container">
-      <h2>Skills</h2>
-      <div id="skills-grid" class="skills-grid"></div>
-    </div>
-  </section>
-
-  <section id="exp" class="section timeline">
-    <div class="container">
-      <h2>Education & Experience</h2>
-      <div id="timeline"></div>
-    </div>
-  </section>
-
-  <section id="projects" class="section">
-    <div class="container">
-      <h2>Projects</h2>
-      <div id="proj-grid" class="grid"></div>
-    </div>
-  </section>
-
-  <section id="certs" class="section">
-    <div class="container">
-      <h2>Awards & Certifications</h2>
-      <div id="cert-grid" class="grid"></div>
-    </div>
-  </section>
-</main>
-
-<footer id="contact" class="footer">
-  <div class="container">
-    <h3>Contact</h3>
-    <p id="footer-contact"></p>
-    <p class="small">© 2025 Pardha Saradhi Chandana</p>
-  </div>
-</footer>
-
-<!-- Modal -->
-<div id="modal" class="modal hidden" aria-hidden="true">
-  <div class="modal-inner">
-    <button id="modal-close" class="modal-close">Back</button>
-    <h3 id="modal-title"></h3>
-    <p id="modal-desc"></p>
-    <p id="modal-details"></p>
-    <a id="modal-link" class="btn link" target="_blank">Open Link</a>
-  </div>
-</div>
-
-<button id="backTop" class="back-top hidden" title="Back to top">↑</button>
-
-<script src="data.js"></script>
-<script>
-// populate site
-document.getElementById('brand').textContent = SITE.name.split(' ')[0];
-document.getElementById('name').textContent = SITE.name;
-document.getElementById('title').textContent = SITE.title;
-document.getElementById('link-linkedin').href = SITE.linkedin;
-document.getElementById('link-email').href = 'mailto:' + SITE.email;
-document.getElementById('link-resume').href = SITE.resume;
-document.getElementById('about-intro').textContent = ABOUT.intro;
-document.getElementById('about-summary').textContent = ABOUT.summary;
-
-// facts counters
-const factsGrid = document.getElementById('facts-grid');
-FACTS.forEach(function(f){
-  const el = document.createElement('div');
-  el.className = 'fact';
-  el.innerHTML = '<div class="fact-num" data-target="'+f.value+'">0</div><div class="fact-label">'+f.label+'</div>';
-  factsGrid.appendChild(el);
-});
-
-// skills
-const skillsGrid = document.getElementById('skills-grid');
-SKILLS.forEach(function(s){
-  const el = document.createElement('div');
-  el.className = 'skill';
-  el.innerHTML = '<div class="skill-name">'+s.name+'</div><div class="skill-bar"><div class="skill-fill" style="width:'+s.level+'%"></div></div>';
-  skillsGrid.appendChild(el);
-});
-
-// timeline (experience + education)
-const timeline = document.getElementById('timeline');
-EXPERIENCE.forEach(function(e){
-  const d = document.createElement('div');
-  d.className = 'timeline-item';
-  d.innerHTML = '<h4>'+e.role+' <span class="muted">| '+e.company+'</span></h4><p class="muted">'+e.duration+'</p><p>'+e.desc+'</p>';
-  timeline.appendChild(d);
-});
-EDUCATION.forEach(function(ed){
-  const d = document.createElement('div');
-  d.className = 'timeline-item';
-  d.innerHTML = '<h4>'+ed.degree+'</h4><p class="muted">'+ed.inst+' • '+ed.period+'</p>';
-  timeline.appendChild(d);
-});
-
-// projects grid and modal
-const projGrid = document.getElementById('proj-grid');
-PROJECTS.forEach(function(p){
-  const card = document.createElement('div');
-  card.className = 'proj-card';
-  const thumb = p.image ? ('assets/projects/'+p.image) : '';
-  card.innerHTML = '<div class="proj-thumb" style="background-image:url('+ (thumb||'') +')"></div><h4>'+p.title+'</h4><p>'+p.desc+'</p><button class="open-proj" data-id="'+p.id+'">View Details</button>';
-  projGrid.appendChild(card);
-});
-
-// certs grid
-const certGrid = document.getElementById('cert-grid');
-CERTIFICATIONS.forEach(function(c){
-  const card = document.createElement('div');
-  card.className = 'cert-card';
-  const thumb = c.image ? ('assets/certifications/'+c.image) : '';
-  card.innerHTML = '<div class="cert-thumb" style="background-image:url('+ (thumb||'') +')"></div><h4>'+c.title+'</h4>';
-  certGrid.appendChild(card);
-});
-
-// modal logic
-function openProj(id){
-  var proj = PROJECTS.find(function(x){return x.id===id;});
-  if(!proj) return;
-  document.getElementById('modal-title').textContent = proj.title;
-  document.getElementById('modal-desc').textContent = proj.desc;
-  document.getElementById('modal-details').textContent = proj.details;
-  document.getElementById('modal-link').href = proj.link || '#';
-  document.getElementById('modal').classList.remove('hidden');
-  document.getElementById('modal').setAttribute('aria-hidden','false');
-}
-document.addEventListener('click', function(e){
-  if(e.target && e.target.classList.contains('open-proj')){
-    openProj(e.target.getAttribute('data-id'));
-  }
-});
-document.getElementById('modal-close').addEventListener('click', function(){ document.getElementById('modal').classList.add('hidden'); document.getElementById('modal').setAttribute('aria-hidden','true'); });
-
-// footer contact
-document.getElementById('footer-contact').innerHTML = '<a href="'+SITE.linkedin+'">LinkedIn</a> • <a href="mailto:'+SITE.email+'">Email</a>';
-
-// counters animation on scroll
-function animateCounters(){
-  const counters = document.querySelectorAll('.fact-num');
-  counters.forEach(function(c){
-    const target = +c.getAttribute('data-target');
-    const step = Math.ceil(target / 80);
-    let cur = 0;
-    const id = setInterval(function(){
-      cur += step;
-      if(cur >= target){ c.textContent = target; clearInterval(id); } else c.textContent = cur;
-    }, 12);
-  });
-}
-var factsSeen = false;
-window.addEventListener('scroll', function(){
-  const rect = document.getElementById('facts').getBoundingClientRect();
-  if(!factsSeen && rect.top < window.innerHeight*0.85){ animateCounters(); factsSeen = true; }
-  // back-to-top
-  const bt = document.getElementById('backTop');
-  if(window.scrollY > 400) bt.classList.remove('hidden'); else bt.classList.add('hidden');
-});
-document.getElementById('backTop').addEventListener('click', function(){ window.scrollTo({top:0, behavior:'smooth'}); });
-
-// simple particle background (lightweight)
-(function(){
-  var canvas = document.getElementById('particles');
-  if(!canvas) return;
-  canvas.width = window.innerWidth;
-  canvas.height = window.innerHeight * 0.6;
-  var ctx = canvas.getContext('2d');
-  var particles = [];
-  for(var i=0;i<90;i++){
-    particles.push({x:Math.random()*canvas.width,y:Math.random()*canvas.height,r:Math.random()*1.6+0.4,vx:(Math.random()-0.5)*0.6,vy:(Math.random()-0.5)*0.6,alpha:Math.random()*0.6+0.2});
-  }
-  function tick(){
-    ctx.clearRect(0,0,canvas.width,canvas.height);
-    for(var i=0;i<particles.length;i++){
-      var p = particles[i];
-      p.x += p.vx; p.y += p.vy;
-      if(p.x<0) p.x = canvas.width; if(p.x>canvas.width) p.x=0;
-      if(p.y<0) p.y = canvas.height; if(p.y>canvas.height) p.y=0;
-      ctx.beginPath();
-      ctx.fillStyle = 'rgba(160,120,255,'+p.alpha+')';
-      ctx.arc(p.x,p.y,p.r,0,Math.PI*2);
-      ctx.fill();
-    }
-    requestAnimationFrame(tick);
-  }
-  tick();
-  window.addEventListener('resize', function(){ canvas.width = window.innerWidth; canvas.height = window.innerHeight *0.6; });
-})();
-
-// smooth nav scroll
-document.querySelectorAll('.nav-links a').forEach(function(a){
-  a.addEventListener('click', function(e){ e.preventDefault(); var id = a.getAttribute('href'); document.querySelector(id).scrollIntoView({behavior:'smooth'}); });
-});
-</script>
+  <h1>Portfolio Home - Placeholder</h1>
+  <script src="script.js"></script>
 </body>
 </html>
