--- a/index.html
+++ b/index.html
@@ -1,195 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>My Portfolio</title>
-  <link rel="icon" href="images/favicon.png" type="image/png">
-  <!-- FontAwesome for icons -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-  <link rel="stylesheet" href="style.css">
-</head>
-<body>
-  <!-- Sidebar Navigation -->
-  <nav class="sidebar">
-    <h2 class="logo">MyName</h2>
-    <ul>
-      <li><a href="#about">About</a></li>
-      <li><a href="#facts">Facts</a></li>
-      <li><a href="#skills">Skills</a></li>
-      <li><a href="#experience">Experience</a></li>
-      <li><a href="#projects">Projects</a></li>
-      <li><a href="#certifications">Certifications</a></li>
-      <li><a href="#contact">Contact</a></li>
-    </ul>
-  </nav>
-
-  <!-- Main Content -->
-  <main>
-    <!-- Hero / About Section -->
-    <section id="about" class="hero">
-      <h1>Hello, I'm John Doe</h1>
-      <h3><span id="typed-text"></span></h3>
-      <p>A passionate engineer specializing in RAN, RF, and Automation testing.</p>
-    </section>
-
-    <!-- Facts Section with animated counters -->
-    <section id="facts" class="facts">
-      <h2>Facts</h2>
-      <div class="fact-container">
-        <div class="fact">
-          <h3 class="count" data-target="3">0</h3>
-          <p>Internships</p>
-        </div>
-        <div class="fact">
-          <h3 class="count" data-target="5">0</h3>
-          <p>Certifications</p>
-        </div>
-        <div class="fact">
-          <h3 class="count" data-target="8">0</h3>
-          <p>Projects</p>
-        </div>
-        <div class="fact">
-          <h3 class="count" data-target="12">0</h3>
-          <p>Courses</p>
-        </div>
-      </div>
-    </section>
-
-    <!-- Skills Section with progress bars -->
-    <section id="skills">
-      <h2>Skills</h2>
-      <div class="skill">
-        <p>RAN Testing</p>
-        <div class="skill-bar">
-          <div class="skill-bar-fill" data-skill-level="90%"></div>
-        </div>
-      </div>
-      <div class="skill">
-        <p>RF Engineering</p>
-        <div class="skill-bar">
-          <div class="skill-bar-fill" data-skill-level="80%"></div>
-        </div>
-      </div>
-      <div class="skill">
-        <p>Automation</p>
-        <div class="skill-bar">
-          <div class="skill-bar-fill" data-skill-level="85%"></div>
-        </div>
-      </div>
-      <div class="skill">
-        <p>Programming</p>
-        <div class="skill-bar">
-          <div class="skill-bar-fill" data-skill-level="75%"></div>
-        </div>
-      </div>
-    </section>
-
-    <!-- Experience Section with Timeline (Work and Education) -->
-    <section id="experience">
-      <h2>Work Experience</h2>
-      <div class="timeline">
-        <div class="container left">
-          <div class="content">
-            <h3>RAN Test Engineer - Company A</h3>
-            <p>Jan 2020 – Dec 2021</p>
-          </div>
-        </div>
-        <div class="container right">
-          <div class="content">
-            <h3>RF Engineer - Company B</h3>
-            <p>Jan 2022 – Present</p>
-          </div>
-        </div>
-      </div>
-      <h2>Education</h2>
-      <div class="timeline">
-        <div class="container left">
-          <div class="content">
-            <h3>Bachelor of Engineering - University X</h3>
-            <p>2016 – 2020</p>
-          </div>
-        </div>
-        <div class="container right">
-          <div class="content">
-            <h3>Diploma in Electronics - College Y</h3>
-            <p>2014 – 2016</p>
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <!-- Projects Section with clickable images -->
-    <section id="projects">
-      <h2>Projects</h2>
-      <div class="projects-container">
-        <div class="project">
-          <img class="modal-img" src="images/project1.png" alt="Project 1">
-          <p>Project One</p>
-        </div>
-        <div class="project">
-          <img class="modal-img" src="images/project2.png" alt="Project 2">
-          <p>Project Two</p>
-        </div>
-        <div class="project">
-          <img class="modal-img" src="images/project3.png" alt="Project 3">
-          <p>Project Three</p>
-        </div>
-      </div>
-      <!-- Modal Structure for project images -->
-      <div id="modal" class="modal">
-        <span class="close">&times;</span>
-        <img class="modal-content" id="modal-img">
-        <div id="modal-caption"></div>
-      </div>
-    </section>
-
-    <!-- Certifications Section with clickable images -->
-    <section id="certifications">
-      <h2>Certifications</h2>
-      <div class="certifications-container">
-        <div class="cert">
-          <img class="modal-img" src="images/cert1.png" alt="Cert 1">
-          <p>Certification One</p>
-        </div>
-        <div class="cert">
-          <img class="modal-img" src="images/cert2.png" alt="Cert 2">
-          <p>Certification Two</p>
-        </div>
-        <div class="cert">
-          <img class="modal-img" src="images/cert3.png" alt="Cert 3">
-          <p>Certification Three</p>
-        </div>
-      </div>
-      <!-- Reuse the same modal for certifications -->
-      <div id="modal" class="modal">
-        <span class="close">&times;</span>
-        <img class="modal-content" id="modal-img">
-        <div id="modal-caption"></div>
-      </div>
-    </section>
-
-    <!-- Contact Section with form -->
-    <section id="contact">
-      <h2>Contact Me</h2>
-      <form>
-        <div class="form-group">
-          <label for="name">Name <i class="fas fa-user"></i></label>
-          <input type="text" id="name" placeholder="Your Name">
-        </div>
-        <div class="form-group">
-          <label for="email">Email <i class="fas fa-envelope"></i></label>
-          <input type="email" id="email" placeholder="Your Email">
-        </div>
-        <div class="form-group">
-          <label for="message">Message <i class="fas fa-comment-dots"></i></label>
-          <textarea id="message" placeholder="Your Message"></textarea>
-        </div>
-        <button type="submit">Send Message</button>
-      </form>
-    </section>
-  </main>
-
-  <script src="script.js"></script>
-</body>
-</html>
+<!DOCTYPE html><html><head><title>Pardha Portfolio</title></head><body><h1>Portfolio Rebuild Complete</h1></body></html>
