--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 
   <!-- ======= Hero Section ======= -->
   <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
-    <img src="assets/img/hero-bg.jpg" alt="" data-aos="fade-in" class="">
+    <img src="assets/img/hero-resized.svg" alt="" data-aos="fade-in" class="">
 	<div class="hero-container" data-aos="fade-in" data-aos-delay="500">
       <h1> <span>Pardha Saradhi Chandana</span></h1>
       <p>I'm <span class="typed"
