--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
           <li><a href="#portfolio" class="nav-link scrollto"><i class="bx bx-book-content"></i>
               <span>Projects</span></a></li>
           <li><a href="#services" class="nav-link scrollto"><i class="bx bx-server"></i> <span>Services</span></a></li>
-          <li><a href="#testimonials" class="nav-link scrollto"><i class="bx bx-certification"></i>
+          <li><a href="#certifications" class="nav-link scrollto"><i class="bx bx-certification"></i>
               <span>Awards & Certifications</span></a></li>
         </ul>
       </nav><!-- .nav-menu -->
@@ -691,7 +691,7 @@
     </section><!-- End Services Section -->
 
     <!-- ======= Testimonials Section ======= -->
-    <section id="testimonials" class="testimonials section-bg">
+    <section id="certifications" class="testimonials section-bg">
       <div class="container">
 
         <div class="section-title">
