--- a/index.html
+++ b/index.html
@@ -763,7 +763,7 @@
       <h2 style="font-size: 48px;">I'm <span style="color: #ffa46f;">Open for Employment</span></h2>
       <p>I am looking for an opportunities in</p>
       <ul class="open-to-work__interests">
-        <li><i class="bi bi-check"></i> System Test Engineer</li>
+        <li><i class="bi bi-check"></i> RF Test Engineer</li>
         <li><i class="bi bi-check"></i> QA Engineer</li>
         <!--<li><i class="bi bi-check"></i> Software Development</li>-->
         <li><i class="bi bi-check"></i> RAN Test Engineer</li>
@@ -798,7 +798,7 @@
   </main><!-- End #main -->
 
   <!-- ======= Footer ======= -->
-  <footer id="footer">
+  <!-- <footer id="footer">
     <div class="container">
       <div class="copyright">
         &copy; Copyright <strong><span>iPortfolio</span></strong>
@@ -807,11 +807,12 @@
         <!-- All the links in the footer should remain intact. -->
         <!-- You can delete the links only if you purchased the pro version. -->
         <!-- Licensing information: https://bootstrapmade.com/license/ -->
-        <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/iportfolio-bootstrap-portfolio-websites-template/ -->
+        <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/iportfolio-bootstrap-portfolio-websites-template/ 
         Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
       </div>
     </div>
-  </footer><!-- End  Footer -->
+  </footer><!-- End  Footer --> 
+-->
 
   <!-- <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i
       class="bi bi-arrow-up-short"></i></a> -->
