--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="assets/img/pardhu-logo3.jpeg" rel="icon">
-  <link href="assets/img/pardhu-logo3.jpeg" rel="ravi-icon">
+  <link href="assets/img/pardhu-logo.jpg" rel="icon">
+  <link href="assets/img/pardhu-logo.jpg" rel="ravi-icon">
 
   <!-- Google Fonts -->
   <link
