--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="assets/img/favicon.png" rel="icon">
+  <link rel="icon" type="image/png" href="assets/img/favicon.png">
   <link href="assets/img/favicon.png" rel="ravi-icon">
 
   <!-- Google Fonts -->
