--- a/index.html
+++ b/index.html
@@ -85,8 +85,8 @@
 
   <!-- ======= Hero Section ======= -->
   <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
-    <img src="assets/img/hero-resized.svg" alt="" data-aos="fade-in" class="">
-	<div class="hero-container" data-aos="fade-in" data-aos-delay="500">
+    <!--<img src="assets/img/hero-resized.svg" alt="" data-aos="fade-in" class="">-->
+	<div class="hero-container" data-aos="fade-in">
       <h1> <span>Pardha Saradhi Chandana</span></h1>
       <p>I'm <span class="typed"
           data-typed-items="System Test Engineer, QA Engineer, RAN Test Engineer"></span></p>
