--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
     href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i"
     rel="stylesheet">
   <link href="https://fonts.cdnfonts.com/css/agustina" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap" rel="stylesheet">
+
 
   <!-- Vendor CSS Files -->
   <link href="assets/vendor/aos/aos.css" rel="stylesheet">
@@ -51,11 +53,11 @@
 
       <div class="profile">
         <img src="assets/img/my-profile-img.jpg" alt="" class="img-fluid rounded-circle">
-        <h1 class="text-light" style="font-size: 15px;">
-          <span> < </span>
-          <a href="index.html" class="sign-name">Pardha Saradhi Chandana</a>
-          <span> /> </span>
-        </h1>
+        <h1 class="text-light" style="font-family: 'Great Vibes', cursive; font-size: 30px;">
+  			<span>&lt;</span>
+  			<a href="index.html" class="sign-name">Pardha Saradhi Chandana</a>
+  			<span>/&gt;</span>
+		</h1>
         <div class="social-links mt-3 text-center">
           <div class="card">
             <span>Social</span>
