--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     rel="stylesheet">
   <link href="https://fonts.cdnfonts.com/css/agustina" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Lavishly+Yours&display=swap" rel="stylesheet">
 
 
   <!-- Vendor CSS Files -->
@@ -53,7 +54,7 @@
 
       <div class="profile">
         <img src="assets/img/my-profile-img.jpg" alt="" class="img-fluid rounded-circle">
-        <h1 class="text-light" style="font-family: 'Great Vibes', cursive; font-size: 30px;">
+        <h1 class="text-light" style="font-family: 'Lavishly Yours', cursive; font-size: 30px;">
   			<span>&lt;</span>
   			<a href="index.html" class="sign-name">Pardha Saradhi Chandana</a>
   			<span>/&gt;</span>
