--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
   <link href="https://fonts.cdnfonts.com/css/agustina" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Lavishly+Yours&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Annie+Use+Your+Telescope&display=swap" rel="stylesheet">
 
 
   <!-- Vendor CSS Files -->
@@ -54,7 +55,7 @@
 
       <div class="profile">
         <img src="assets/img/my-profile-img.jpg" alt="" class="img-fluid rounded-circle">
-        <h1 class="text-light" style="font-family: 'Lavishly Yours', cursive; font-size: 30px;">
+        <h1 class="text-light">
   			<span>&lt;</span>
   			<a href="index.html" class="sign-name">Pardha Saradhi Chandana</a>
   			<span>/&gt;</span>
