--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
       <div class="profile">
         <img src="assets/img/my-profile-img.jpg" alt="" class="img-fluid rounded-circle">
-        <h1 class="text-light">
+        <h1 class="text-light" style="font-size: 20px;>
   			<span>&lt;</span>
   			<a href="index.html" class="sign-name">Pardha Saradhi Chandana</a>
   			<span>/&gt;</span>
