--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
         </div>
 
         <div class="row">
-          <div class="col-lg-4" data-aos="fade-right">
+          <div class="col-lg-4 text-center" data-aos="fade-right">
             <img src="assets/img/my-profile-img.jpg" class="img-fluid" alt="">
             <h3 class="about-me-title">System Test Engineer.</h3>
           </div>
