--- a/index.html
+++ b/index.html
@@ -19,8 +19,10 @@
     rel="stylesheet">
   <!-- <link href="https://fonts.cdnfonts.com/css/agustina" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=Lavishly+Yours&display=swap" rel="stylesheet"> -->
-  <link href="https://fonts.googleapis.com/css2?family=Annie+Use+Your+Telescope&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Lavishly+Yours&display=swap" rel="stylesheet"> 
+  <link href="https://fonts.googleapis.com/css2?family=Annie+Use+Your+Telescope&display=swap" rel="stylesheet"> -->
+  <link href="https://fonts.cdnfonts.com/css/compressedhand" rel="stylesheet">
+                
 
 
   <!-- Vendor CSS Files -->
@@ -55,7 +57,7 @@
 
       <div class="profile">
         <img src="assets/img/my-profile-img.jpg" alt="" class="img-fluid rounded-circle">
-        <h1 class="text-light" style="font-size: 20px;">
+        <h1 class="text-light" style="font-size: 28px;">
   			<span>&lt;</span>
   			<a href="index.html" class="sign-name">Pardha Saradhi Chandana</a>
   			<span>/&gt;</span>
