--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
       <div class="profile">
         <img src="assets/img/my-profile-img.jpg" alt="" class="img-fluid rounded-circle">
-        <h1 class="text-light" style="font-size: 28px;">
+        <h1 class="text-light">
   			<span>&lt;</span>
   			<a href="index.html" class="sign-name">Pardha Saradhi Chandana</a>
   			<span>/&gt;</span>
